scenes home fixing overflow on the image and giving and adding i to the header

--- a/src/scenes/home/home.css
+++ b/src/scenes/home/home.css
@@ -1,6 +1,7 @@
 header {
   width: 100%;
   height: auto;
+  overflow: hidden;
 }
 
 .container {
